# ElectricSQL-RAG

./: README.md
app/: Makefile  data.json  main.py  output.json  pyproject.toml
